# 2026-slides

./: .buildinfo  README.md  app.py  index.html  objects.inv  skills-lock.json
.codex/: config.toml
.github/workflows/: publish-pages.yml
_sources/: index.rst.txt
_sources/aidd-auto-pilot1/: claude-codex-combined-loop.rst.txt
aidd-auto-pilot1/: claude-codex-combined-loop.html
aidd-auto-pilot2/: claude-codex-combined-loop.html
aidd-auto-pilot4/: various-subagents.html
cfp-findy/: proposal-accumulating-everyday-output.html
codex-findy/: my-best-partner-codex-app.html  my-best-partner-codex-cli.html
codex-meetup-tokyo1/: from-source-reading.html
engineers-anime/: my-dear-emily-chang.html  yabuki-kana-san-my-light.html
fukuokark05/: otel_deep_research.html
hannari-local-llm/: llm-lives-in-firefox.html
imasnight/: april-shadow-bout.html  july-awesome-million-live.html
lancers-ai-talk/: claude-code-failure-learnings.html
pyconshizu/: write-linter-rules.html
pyconus/: stdlib-logging-kata-ja.html  stdlib-logging-kata.html
python-fukuoka/: protocol-meets-lsp.html
pythonasia/: breaking-free-from-virtual-environments-ja.html  breaking-free-from-virtual-environments.html
saikyo-dev2/: vs-astral.html
saikyo-dev4/: python-buttsubushi.html
samplecode/write-python-linter-rules/flake8_plugin_example/: kotoha_plugin.py  pyproject.toml
security-any/: 11-starlette-badhost.html
source/: conf.py  expand_sources.py
stapy-may/: codex-python-sdk.html
stapy-syncable/: develop-with-codex-101.html
tachikawaany1/: python-logging-envvar.html
(+115 files in other folders)
